# efficient-learning-khan

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-analyses  Dockerfile-experiment  LICENSE  README.md  analyses-requirements.txt  astronomy video questions.txt  default.conf  docker-README.md  docker-compose.yml  environment_setup.py  launch_notebooks.sh  optional-requirements.txt  requirements.txt
code/: copydata.py  transcript_dicer.py
code/data analysis/: astronomyquestions.tsv  grader.py  model_topics.py  plot_topic_models.py  questions.csv  testdata  testoutput  testoutput.csv  testvideoquestions
code/data-analysis/: embeddings.npy  fit_CV.npy  fit_LDA.npy  grader.py  questionformatter.py  questions.tsv  testoutput.tsv  testvideoquestions
code/khan_helpers/: __init__.py  helpers.py  participant.py  setup.cfg  setup.py
code/khan_helpers/khan_helpers/: __init__.py  constants.py  experiment.py  functions.py  helpers.py  participant.py
data/: fit_CV.npy  grid_search_results.p  qcorrs_peak_intervals.p
docker/: Dockerfile-analyses  Dockerfile-experiment  analysis-environment.yml  docker-pysetup.py  jupyter_notebook_config.py
exp/: .psiturkconfig  config.txt  custom.py
lab-meeting-072020/: lab-meeting-072020.key
notebooks/: ANVIL-extraction-sherlock-mini-test.ipynb  Untitled.ipynb  opensesame-data-processing.ipynb
opensesame-exp/: trial1.osexp
paper/: changes.tex  compile.sh  diff.tex  main.tex  old.tex  old2.tex  supplement.tex
stimuli/: annotations-scheme.xml  atlanta-ep1-annotation.anvil  atlanta-ep1-annotation.anvil.backup
(+330 files in other folders)
