[metadata]
name = khan_helpers
version = attr: khan_helpers.__version__
description = "Helper classes and functions for reproducing the analyses"
author = Paxton Fitzpatrick, Contextual Dynamics Lab
author_email = contextualdynamics@gmail.com
url = https://github.com/ContextLab/efficient-learning-khan
download_url = https://github.com/ContextLab/efficient-learning-khan
license = MIT

[options]
python_requires = >=3.6
packages = khan_helpers
setup_requires = setuptools>=38.3.0
